add partials and destroy action

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,2 @@
 <h1> this is the home page</h1>
-<%= link_to 'About', about_path %>
+<%= link_to 'Alpha-Blog', articles_path %>&nbsp;&nbsp;|&nbsp;&nbsp;<%= link_to 'About', about_path %>
