--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,2 +1,27 @@
+$navbar-default-bg:#2c4977;
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+#logo{
+  float: left;
+  font-size: 1.7em;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  font-weight: bold;
+}
+#logo:hover{
+  color: #fff;
+  text-decoration: none;
+}
+#bq{
+  font-style: italic;
+  color:#20566d;
+}
+.center{
+  text-align: center;
+}
+.jumbotron{
+  background-image: asset-url('home-pg.jpg');
+}
