--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,9 @@
-<h1> this is the home page</h1>
-<%= link_to 'Alpha-Blog', articles_path %>&nbsp;&nbsp;|&nbsp;&nbsp;<%= link_to 'About', about_path %>
+<div class="center jumbotron">
+    <h1>Welcome to Alpha-Blog</h1> 
+    <blockquote id="bq">
+  <h2>“Successful blogging is not about one time hits. It’s about building a loyal following over time.”</h2>
+  <footer style="text-align:right"; >-- David Aston</footer>
+</blockquote>
+                                                                                                                     
+  <%= link_to "Sign-up", "#", class: "btn btn-primary btn-lg" %>
+</div>
