--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,8 @@
 <div class="center jumbotron">
     <h1>Welcome to Alpha-Blog</h1> 
-    <blockquote id="bq">
-  <h2>“Successful blogging is not about one time hits. It’s about building a loyal following over time.”</h2>
-  <footer style="text-align:right"; >-- David Aston</footer>
-</blockquote>
+  <h2 id="bq">“Successful blogging is not about one time hits. It’s about building a loyal following over time.”</h2>
+  <footer style="text-align:right"; >-- David Aston</footer><br/>
+  <br/>
                                                                                                                      
-  <%= link_to "Sign-up", "#", class: "btn btn-primary btn-lg" %>
+  <%= link_to "Sign-up", "#", class: "btn btn-primary btn-lg", id: "sign-up" %>
 </div>
