--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -6,6 +6,12 @@ footer a:hover, a:visited{
   text-decoration: none;
   color: black;
 }
+footer {
+margin-top: 25px;
+padding-top: 5px;
+border-top: 1px solid #eaeaea;
+color: #777;
+}
 footer ul{
   float: right;
   list-style: none;
