--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -6,19 +6,35 @@
   <% end  %>
 </ul>
 <% end %>
-<%= form_for @article do |f| %>
-<p>
-<%= f.label :title %>
-<%= f.text_field :title %>
-</p>
-<p>
-<%= f.label :description %>
-<%= f.text_area :description %>
-</p>
-<p>
-<%= f.submit %>
-</p>
+<div class='row'>
+  <div class='col-xs-12'>
+   <%= form_for(@article, :html => {class: "form-horizontal", role: "form" }) do |f| %>
+    <div class="form-group">
+      <div class="control-label col-sm-2" >
+         <%= f.label :title %>
+      </div>
+      <div class='col-sm-8' >
+         <%= f.text_field :title, class: "form-control", autofocus: true, placeholder: "title of the article"  %>
+      </div>
+    </div>
+    <div class="form-group">
+       <div class="control-label col-sm-2" >
+         <%= f.label :description %>
+       </div> 
+       <div class='col-sm-8' >
+         <%= f.text_area :description, class: "form-control",placeholder: "body of article", rows: 10  %>
+        </div>
+    </div>  
+    <div class="form-group">
+       <div class="col-sm-offset-2 col-sm-10" >
+         <%= f.submit  class: "btn btn-primary btn-lg" %>
+        </div>
+    </div>    
 <% end %>
+</div>
+</div>
 
+<div class="col-sm-offset-4 col-xs-10" >
+   [ <%= link_to "Cancel request and return to articles Listing", articles_path %> ]
+</div>   
 
-<%= link_to "Back to Listing", articles_path %>
