--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="center jumbotron">
     <h1>Welcome to Alpha-Blog</h1> 
   <h2 id="bq">“Successful blogging is not about one time hits. It’s about building a loyal following over time.”</h2>
-  <footer style="text-align:right"; >-- David Aston</footer><br/>
+  <p style="text-align:right"; >-- David Aston</p><br/>
   <br/>
                                                                                                                      
   <%= link_to "Sign-up", "#", class: "btn btn-primary btn-lg", id: "sign-up" %>
