add styling to show page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -49,3 +49,10 @@ margin-left:20px;
   background-image: asset-url('home-pg.jpg');
   background-size: cover;
 }
+.article-actions{
+  border-top: 1px solid #eaeaea;
+  pading-top:5px;
+}
+.description{
+  margin-top: 0;
+}
