--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -56,6 +56,10 @@ margin-left:20px;
 .description{
   margin-top: 0;
 }
+.article-meta-data{
+  border-top: 1px solid #eaeaea;
+  margin-top: 15px;
+}
 .article-title{
   font-weight: bold;
   font-size: 1.5em;
