--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,8 +8,14 @@
         </div>
         <div class="article-body">
           <%= truncate(article.description, length: 100) %>
+          <div class= "article-meta-data">
+            <small>Created by:<%= article.user.username if article.user %>&#160;|
+              <%= time_ago_in_words(article.created_at) %> ago&#160;|
+              Last update <%= time_ago_in_words(article.updated_at) %> ago
+            </small>
+          </div>
         </div>
-         <div class="article-actions">
+        <div class="article-actions">
            <%= link_to "Edit this article", edit_article_path(article), class: "btn btn-primary btn-xs" %>                                                                                              
            <%= link_to "Delete this article", article_path(article), method: :delete, 
                                  data: {confirm: "Are you sure you want to delete this article?"},
