--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,6 @@
 <h2 align="center"> All Alpha-Blogger</h2>
 <div align= "center">
+  <%= will_paginate %>
  <% @users.each do |user| %>
   <ul class="listing">
    <div class="row">
@@ -17,5 +18,6 @@
     </div>
   </ul>
 <% end %>
+<%= will_paginate %>
 </div>
 
