--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <h2 align="center"> Welcome to <%= @user.username %>'s page </h2>
-<div class = "row"></div>
-   <div class="col-md-4 col-xs-offset-4 center">
+<div class = "row "></div>
+   <div class="col-md-4 col-md-offset-4 center">
     <%= gravatar_for @user, size: 150 %>                                                                                           
    </div>
 </div>  
