Restrict actions from UI

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,5 +4,5 @@
   <p style="text-align:right"; >-- David Aston</p><br/>
   <br/>
                                                                                                                      
-  <%= link_to "Sign-up", "#", class: "btn btn-primary btn-lg", id: "sign-up" %>
+  <%= link_to "Sign-up", signup_path , class: "btn btn-primary btn-lg", id: "sign-up" %>
 </div>
