--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -5,6 +5,7 @@
     </div>
     <ul class="nav navbar-nav">
       <li><%= link_to "Articles", articles_path %></li>
+      <% if logged_in? %>
       <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Perform Actions <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><%= link_to "Create article", new_article_path %></li>
@@ -12,7 +13,8 @@
           <li><a href="#">Page 1-3</a></li>
         </ul>
       </li>
-      <li><a href="#">Page 2</a></li>
+      <% end %>
+      <li><%= link_to "Users", users_path %></li>
       <li>
       <form class="form-inline" >
     <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
@@ -23,6 +25,15 @@
       
         <% if logged_in? %>
           <li><%= link_to "log out", logout_path, method: :delete %></li>
+          <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Your Profile <span class="caret"></span></a>
+           <ul class="dropdown-menu">
+             <li><%= link_to "Edit your profile", edit_user_path(current_user) %></li>
+             <li><%= link_to "View your profile", user_path(current_user) %></li>
+             <li><a href="#">Something else here</a></li>
+             <li role="separator" class="divider"></li>
+             <li><a href="#">Separated link</a></li>
+            </ul>
+          </li>
           <% else %>
           <li><%= link_to "Log in", login_path %></li>
           <li><%= link_to "Sign up", signup_path %></li>
