--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -25,7 +25,7 @@
       
         <% if logged_in? %>
           <li><%= link_to "log out", logout_path, method: :delete %></li>
-          <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Your Profile <span class="caret"></span></a>
+          <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Your Profile<%= "Admin" if current_user.admin? %> <span class="caret"></span></a>
            <ul class="dropdown-menu">
              <li><%= link_to "Edit your profile", edit_user_path(current_user) %></li>
              <li><%= link_to "View your profile", user_path(current_user) %></li>
