--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -14,6 +14,12 @@
          <%= pluralize(user.articles.count, "article") if user.articles %>
          </small>
        </li>
+       <li>         
+       <% if logged_in? and current_user.admin? %>
+       <%= link_to "Delete user", user_path(user), method: :delete, 
+           data: {confirm: "Are you sure you want to delete this article?"}, class: "btn btn-danger btn-xs"  %>
+        <% end %>
+       </li>
       </div>
     </div>
   </ul>
