--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,7 +17,7 @@
        <li>         
        <% if logged_in? and current_user.admin? %>
        <%= link_to "Delete user", user_path(user), method: :delete, 
-           data: {confirm: "Are you sure you want to delete this article?"}, class: "btn btn-danger btn-xs"  %>
+           data: {confirm: "Are you sure you want to delete this User?"}, class: "btn btn-danger btn-xs"  %>
         <% end %>
        </li>
       </div>
