--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,26 +6,40 @@
     <ul class="nav navbar-nav">
       <li><%= link_to "Articles", articles_path %></li>
       <% if logged_in? %>
-      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Perform Actions <span class="caret"></span></a>
+       <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Actions <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><%= link_to "Create article", new_article_path %></li>
           <li><a href="#">Page 1-2</a></li>
           <li><a href="#">Page 1-3</a></li>
         </ul>
-      </li>
+       </li>
       <% end %>
       <li><%= link_to "Users", users_path %></li>
+      <li class="dropdown">
+         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Categories<span class="caret"></span></a>
+         <ul class="dropdown-menu">
+          <li><%= link_to "All categories", categories_path %></li>
+          <% Category.all.each do |category| %>
+            <li><%= link_to category.name, category_path(category) %></li>
+            <% end %>
+            <% if logged_in? and current_user.admin? %>
+             <li role="separator" class="divider"></li>
+             <li><%= link_to "Create new category", new_category_path %></li>
+            <% end %>
+         </ul>
+      </li>
       <li>
-      <form class="form-inline" >
-    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-  </form></li>
+       <form class="form-inline" >
+         <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+       </form>
+      </li>
     </ul>
-    <ul class="nav navbar-nav navbar-right">
+     <ul class="nav navbar-nav navbar-right">
       
         <% if logged_in? %>
           <li><%= link_to "log out", logout_path, method: :delete %></li>
-          <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Your Profile<%= "Admin" if current_user.admin? %> <span class="caret"></span></a>
+          <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Profile<%= "Admin" if current_user.admin? %> <span class="caret"></span></a>
            <ul class="dropdown-menu">
              <li><%= link_to "Edit your profile", edit_user_path(current_user) %></li>
              <li><%= link_to "View your profile", user_path(current_user) %></li>
