--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -17,7 +17,16 @@
        <div class='col-sm-8' >
          <%= f.text_area :description, class: "form-control",placeholder: "body of article", rows: 10  %>
         </div>
-    </div>  
+    </div> 
+    <div class="form-group">
+      <div class="row">
+       <div class="col-sm-offset-2 col-sm-8">
+         <%= f.collection_check_boxes :category_ids, Category.all, :id, :name do |cb| %>
+          <% cb.label(class: "checkbox-inline input_checkbox") {cb.check_box + cb.text} %>
+         <% end %>
+        </div>
+      </div> 
+      </br>
     <div class="form-group">
        <div class="col-sm-offset-2 col-sm-10" >
          <%= f.submit  class: "btn btn-primary btn-lg" %>
