add edit facility to categories

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -9,6 +9,13 @@
            <%= link_to category.name, category_path(category) %>
        </li>
        <li><small><%= pluralize(category.articles.count, "article") %></small></li>
+       <li>
+        <% if logged_in? and current_user.admin? %>
+          <div class="article-actions">
+            <%= link_to "Edit this category", edit_category_path(category), class: "btn btn-primary btn-xs" %>                                                                                              
+           </div>
+         <% end %>
+         </li>
       </div>
      </div>
    </ul>
